--- a/WebContent/ConsultaLibros.html
+++ b/WebContent/ConsultaLibros.html
@@ -5,7 +5,7 @@
 <title>TiendaLibros</title>
 </head>
 <body>
-	<h2>Tienda Libros AccesoDatos2. Prueba de git 2</h2>
+	<h2>Tienda Libros AccesoDatos2. Prueba de git</h2>
 	<form method="get" action="http://localhost:8080/AccesoDatos/consulta?">
 		<b>Elige un autor:</b>
 		<input type="checkbox" name="autor" value="Alvaro García">Alvaro García
